tests/ui/const-generics/generic_arg_infer/in-signature.stderr
error[E0121]: the placeholder `_` is not allowed within types on item signatures for return types
  --> $DIR/in-signature.rs:6:21
   |
LL | fn arr_fn() -> [u8; _] {
   |                     ^ not allowed in type signatures
   |
help: replace with the correct return type
   |
LL - fn arr_fn() -> [u8; _] {
LL + fn arr_fn() -> [u8; 3] {
   |

error[E0121]: the placeholder `_` is not allowed within types on item signatures for return types
  --> $DIR/in-signature.rs:11:24
   |
LL | fn ty_fn() -> Bar<i32, _> {
   |                        ^ not allowed in type signatures
   |
help: replace with the correct return type
   |
LL - fn ty_fn() -> Bar<i32, _> {
LL + fn ty_fn() -> Bar<i32, 3> {
   |

error[E0121]: the placeholder `_` is not allowed within types on item signatures for return types
  --> $DIR/in-signature.rs:16:25
   |
LL | fn ty_fn_mixed() -> Bar<_, _> {
   |                         ^  ^ not allowed in type signatures
   |                         |
   |                         not allowed in type signatures
   |
help: replace with the correct return type
   |
LL - fn ty_fn_mixed() -> Bar<_, _> {
LL + fn ty_fn_mixed() -> Bar<i32, 3> {
   |

error[E0391]: cycle detected when computing type of `ARR_CT`
  --> $DIR/in-signature.rs:21:1
   |
LL | const ARR_CT: [u8; _] = [0; 3];
   | ^^^^^^^^^^^^^^^^^^^^^
   |
note: ...which requires computing the value for `ARR_CT`...
  --> $DIR/in-signature.rs:21:1
   |
LL | const ARR_CT: [u8; _] = [0; 3];
   | ^^^^^^^^^^^^^^^^^^^^^
   = note: ...which again requires computing type of `ARR_CT`, completing the cycle
note: cycle used when checking that `ARR_CT` is well-formed
  --> $DIR/in-signature.rs:21:1
   |
LL | const ARR_CT: [u8; _] = [0; 3];
   | ^^^^^^^^^^^^^^^^^^^^^
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error[E0391]: cycle detected when computing type of `ARR_CT`
  --> $DIR/in-signature.rs:21:1
   |
LL | const ARR_CT: [u8; _] = [0; 3];
   | ^^^^^^^^^^^^^^^^^^^^^
   |
note: ...which requires computing the value for `ARR_CT`...
  --> $DIR/in-signature.rs:21:1
   |
LL | const ARR_CT: [u8; _] = [0; 3];
   | ^^^^^^^^^^^^^^^^^^^^^
   = note: ...which again requires computing type of `ARR_CT`, completing the cycle
note: cycle used when checking that `ARR_CT` is well-formed
  --> $DIR/in-signature.rs:21:1
   |
LL | const ARR_CT: [u8; _] = [0; 3];
   | ^^^^^^^^^^^^^^^^^^^^^
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0121]: the placeholder `_` is not allowed within types on item signatures for constants
  --> $DIR/in-signature.rs:21:20
   |
LL | const ARR_CT: [u8; _] = [0; 3];
   |                    ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for static variables
  --> $DIR/in-signature.rs:25:25
   |
LL | static ARR_STATIC: [u8; _] = [0; 3];
   |                         ^ not allowed in type signatures
   |
help: replace this with a fully-specified type
   |
LL - static ARR_STATIC: [u8; _] = [0; 3];
LL + static ARR_STATIC: [u8; 3] = [0; 3];
   |

error[E0391]: cycle detected when computing type of `TY_CT`
  --> $DIR/in-signature.rs:27:1
   |
LL | const TY_CT: Bar<i32, _> = Bar::<i32, 3>(0);
   | ^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: ...which requires computing the value for `TY_CT`...
  --> $DIR/in-signature.rs:27:1
   |
LL | const TY_CT: Bar<i32, _> = Bar::<i32, 3>(0);
   | ^^^^^^^^^^^^^^^^^^^^^^^^
   = note: ...which again requires computing type of `TY_CT`, completing the cycle
note: cycle used when checking that `TY_CT` is well-formed
  --> $DIR/in-signature.rs:27:1
   |
LL | const TY_CT: Bar<i32, _> = Bar::<i32, 3>(0);
   | ^^^^^^^^^^^^^^^^^^^^^^^^
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error[E0391]: cycle detected when computing type of `TY_CT`
  --> $DIR/in-signature.rs:27:1
   |
LL | const TY_CT: Bar<i32, _> = Bar::<i32, 3>(0);
   | ^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: ...which requires computing the value for `TY_CT`...
  --> $DIR/in-signature.rs:27:1
   |
LL | const TY_CT: Bar<i32, _> = Bar::<i32, 3>(0);
   | ^^^^^^^^^^^^^^^^^^^^^^^^
   = note: ...which again requires computing type of `TY_CT`, completing the cycle
note: cycle used when checking that `TY_CT` is well-formed
  --> $DIR/in-signature.rs:27:1
   |
LL | const TY_CT: Bar<i32, _> = Bar::<i32, 3>(0);
   | ^^^^^^^^^^^^^^^^^^^^^^^^
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0121]: the placeholder `_` is not allowed within types on item signatures for constants
  --> $DIR/in-signature.rs:27:23
   |
LL | const TY_CT: Bar<i32, _> = Bar::<i32, 3>(0);
   |                       ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for static variables
  --> $DIR/in-signature.rs:31:28
   |
LL | static TY_STATIC: Bar<i32, _> = Bar::<i32, 3>(0);
   |                            ^ not allowed in type signatures
   |
help: replace this with a fully-specified type
   |
LL - static TY_STATIC: Bar<i32, _> = Bar::<i32, 3>(0);
LL + static TY_STATIC: Bar<i32, 3> = Bar::<i32, 3>(0);
   |

error[E0391]: cycle detected when computing type of `TY_CT_MIXED`
  --> $DIR/in-signature.rs:33:1
   |
LL | const TY_CT_MIXED: Bar<_, _> = Bar::<i32, 3>(0);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: ...which requires computing the value for `TY_CT_MIXED`...
  --> $DIR/in-signature.rs:33:1
   |
LL | const TY_CT_MIXED: Bar<_, _> = Bar::<i32, 3>(0);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: ...which again requires computing type of `TY_CT_MIXED`, completing the cycle
note: cycle used when checking that `TY_CT_MIXED` is well-formed
  --> $DIR/in-signature.rs:33:1
   |
LL | const TY_CT_MIXED: Bar<_, _> = Bar::<i32, 3>(0);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error[E0391]: cycle detected when computing type of `TY_CT_MIXED`
  --> $DIR/in-signature.rs:33:1
   |
LL | const TY_CT_MIXED: Bar<_, _> = Bar::<i32, 3>(0);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: ...which requires computing the value for `TY_CT_MIXED`...
  --> $DIR/in-signature.rs:33:1
   |
LL | const TY_CT_MIXED: Bar<_, _> = Bar::<i32, 3>(0);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: ...which again requires computing type of `TY_CT_MIXED`, completing the cycle
note: cycle used when checking that `TY_CT_MIXED` is well-formed
  --> $DIR/in-signature.rs:33:1
   |
LL | const TY_CT_MIXED: Bar<_, _> = Bar::<i32, 3>(0);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0121]: the placeholder `_` is not allowed within types on item signatures for constants
  --> $DIR/in-signature.rs:33:24
   |
LL | const TY_CT_MIXED: Bar<_, _> = Bar::<i32, 3>(0);
   |                        ^  ^ not allowed in type signatures
   |                        |
   |                        not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for static variables
  --> $DIR/in-signature.rs:37:29
   |
LL | static TY_STATIC_MIXED: Bar<_, _> = Bar::<i32, 3>(0);
   |                             ^  ^ not allowed in type signatures
   |                             |
   |                             not allowed in type signatures
   |
help: replace this with a fully-specified type
   |
LL - static TY_STATIC_MIXED: Bar<_, _> = Bar::<i32, 3>(0);
LL + static TY_STATIC_MIXED: Bar<i32, 3> = Bar::<i32, 3>(0);
   |

error[E0121]: the placeholder `_` is not allowed within types on item signatures for associated types
  --> $DIR/in-signature.rs:57:23
   |
LL |     type Assoc = [u8; _];
   |                       ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for associated types
  --> $DIR/in-signature.rs:61:27
   |
LL |     type Assoc = Bar<i32, _>;
   |                           ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for associated types
  --> $DIR/in-signature.rs:65:22
   |
LL |     type Assoc = Bar<_, _>;
   |                      ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for associated types
  --> $DIR/in-signature.rs:65:25
   |
LL |     type Assoc = Bar<_, _>;
   |                         ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for associated constants
  --> $DIR/in-signature.rs:40:21
   |
LL |     const ARR: [u8; _];
   |                     ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for associated constants
  --> $DIR/in-signature.rs:44:25
   |
LL |     const ARR: Bar<i32, _>;
   |                         ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for associated constants
  --> $DIR/in-signature.rs:48:20
   |
LL |     const ARR: Bar<_, _>;
   |                    ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for associated constants
  --> $DIR/in-signature.rs:48:23
   |
LL |     const ARR: Bar<_, _>;
   |                       ^ not allowed in type signatures

error: aborting due to 23 previous errors

Some errors have detailed explanations: E0121, E0391.
For more information about an error, try `rustc --explain E0121`.
